<resources>
    <string name="app_name">WeatherApp</string>
    <string name="cityName">Voronezh</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="wind">WIND</string>
    <string name="sunset">SUNSET</string>
    <string name="uv_index">UV INDEX</string>
    <string name="_7_day_forecast">7-Day Forecast</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="low">Low</string>
    <string name="middle">Middle</string>
    <string name="high">High</string>
    <string name="very_high">Very high</string>
    <string name="extremal">Extremal</string>
    <string name="_6_m_s">6 m/s</string>
    <string name="ne">NE</string>
    <string name="humidity">HUMIDITY</string>
    <string name="_45" translatable="false">45%</string>
    <string name="visibility">VISIBILITY</string>
    <string name="_15_km" translatable="false">15 KM</string>
    <string name="precipitation">PRECIPITATION</string>
    <string name="_0mm">0mm</string>
    <string name="none" translatable="false">--</string>
    <string name="meter_per_seconds">m/s</string>
    <string name="max">H</string>
    <string name="min">M</string>
    <string name="kilometers">KM</string>
    <string name="millimeters">mm</string>
    <string name="min_temp">Min</string>
    <string name="max_temp">Max</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="weather">Weather</string>
    <string name="errorText">Can not load data. Please, check your internet connection.</string>
    <string name="city_placeholder">Start typing in a search bar to find a city.</string>
    <string name="empty_result">No results matching your query</string>
    <string name="error_unknown_on_download">Unexpected error while trying to fetch cities!</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="today">Today</string>
    <string name="empty_list">You haven\'t added any cities.</string>
    <string name="open_location" translatable="false">Open location</string>
    <string name="current_location">Current location</string>
    <string name="permission_dialog_explanation_text">To continue please grant access to locations</string>
    <string name="permission_dialog_denied_text">This feature is not available without location permissions. Open app settings?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="location_city" translatable="false">Location city</string>
    <string name="no_access">This feature is not available without location permission</string>
    <string name="cancel">Cancel</string>
    <string name="share">Select app to share with</string>
    <string name="noLocation">Unable to determine location, please, try again later</string>
</resources>